@startuml
class services.impl.DialogService {
- Provider<MedicationDialog> medicationDialogProvider
- Provider<UserDialog> userDialogProvider
- Provider<EditForumCategoryDialog> editForumCategoryDialogProvider
- Provider<FullImageDialog> fullImageDialogProvider
- Provider<ProfileImageDialog> profileImageDialogProvider
- Provider<ConfirmDialog> confirmDialogProvider
- Provider<EmergencyContactDialog> addEmergencyContactDialogProvider
+ void showMedicationDialog(FragmentManager,Medication,MedicationDialog.OnMedicationSubmitListener)
+ void showUserDialog(FragmentManager,User,UserDialog.UserDialogListener)
+ void showEditForumCategoryDialog(FragmentManager,ForumCategory,EditForumCategoryDialog.EditForumCategoryDialogListener)
+ void showFullImageDialog(FragmentManager,Drawable)
+ void showProfileImageDialog(FragmentManager,boolean,ProfileImageDialog.ImagePickerListener)
+ void showEmergencyContactDialog(FragmentManager,EmergencyContact,EmergencyContactDialog.AddEmergencyContactListener)
+ void showConfirmDialog(FragmentManager,String,String,String,String,Runnable)
}


class services.impl.FallDetectionManager {
- {static} String TAG
- {static} int NOTIFICATION_ID
- {static} float FALL_THRESHOLD_SQUARED
- {static} long MIN_TIME_BETWEEN_ALERTS
# IDatabaseService databaseService
# SharedPreferencesUtil sharedPreferencesUtil
# NotificationService notificationService
- SensorManager sensorManager
- Sensor accelerometer
- FusedLocationProviderClient fusedLocationClient
- long lastAlertTime
- boolean isMonitoring
+ void onCreate()
+ int onStartCommand(Intent,int,int)
- void startMonitoring()
- void stopMonitoring()
+ void onSensorChanged(SensorEvent)
- void handleFallDetected()
- void sendEmergencyAlert(String)
+ void onDestroy()
+ IBinder onBind(Intent)
+ void onAccuracyChanged(Sensor,int)
}


class services.impl.EmergencyServiceImpl {
- {static} String USERS_PATH
- {static} String CONTACTS_PATH
+ String generateContactId()
+ void addContact(String,String,String,String,DatabaseCallback<Void>)
+ void deleteContact(String,String,DatabaseCallback<Void>)
+ void updateContact(String,EmergencyContact,DatabaseCallback<Void>)
+ void sendEmergencyAlert(Context,List<EmergencyContact>,String,DatabaseCallback<Void>)
- String getContactsPath(String)
- String getContactItemPath(String,String)
}




services.IDialogService <|.. services.impl.DialogService
android.hardware.SensorEventListener <|.. services.impl.FallDetectionManager
android.app.Service <|-- services.impl.FallDetectionManager
services.IEmergencyService <|.. services.impl.EmergencyServiceImpl
services.impl.BaseDatabaseService <|-- services.impl.EmergencyServiceImpl
@enduml